--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -83,7 +83,7 @@
     
   </form>
   <div class="row travel-categories">  
-    <div class="col category-item" routerLink="/TravelAgent">   
+    <div class="col category-item" routerLink="/agent">   
       <a  target="_blank">Travel Agent <span class="arrow">></span></a>
     </div>
     <div class="col category-item">
