--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,10 +1,9 @@
 <div class="offcanvas-menu-wrapper" [class.active]="isMenuOpen">
     <div class="offcanvas__close" (click)="toggleMenu()" style="color: #fff; float: right; border-radius: 20px; border: 1px solid #fff; padding: 5px 10px; cursor: pointer;">✖</div>
-    <div class="offcanvas__logo">
-<a routerLink=" "><img src="assets/img/logo1.jpg" alt=""></a>
-    </div>
+        <div class="offcanvas__logo">
+            <a routerLink=" "><img src="assets/img/logo1.jpg" alt=""></a>
+        </div>
     <div id="mobile-menu-wrap"></div>
-
     <div class="offcanvas__widget">
         <ul class="menu__class">
             <li><a routerLink="">Home</a></li>
@@ -12,16 +11,24 @@
             <li><a routerLink="/hotels">Hotels</a></li>
             <li><a routerLink="/member">Become a Member</a></li>
             <li><a routerLink="/corporate">Cubino for Business</a></li>
-            <li><a routerLink="/property">List Your Property</a></li>   
-           
+            <li><a routerLink="/property">List Your Property</a></li>  
             <li><a routerLink="/contact">Contact</a></li>                                
-        </ul>
-        <!-- <ul>
-            <li><span class="icon_pin_alt"></span> 96 Ernser Vista Suite 437, NY, US</li>
-            <li><span class="icon_phone"></span> (123) 456-78-910</li>
-            <li><span class="icon_mail"></span> info&#64;cubino.com</li>
-        </ul> -->
+        </ul>       
     </div>
+    @if(loginToken) {
+        <div class="user-dropdown">          
+            <div class="user-icon" (click)="toggleUserDropdown()">
+                <img src="assets/img/user1.png" alt="User" />
+            </div>
+            <div class="dropdown-arrow" (click)="toggleUserDropdown()">▼</div>           
+            <ul class="dropdown-menu" [class.show]="isUserDropdownOpen">
+                <li><a routerLink="/profile">Profile</a></li>
+                <li><a routerLink="/bookings">My Booking</a></li>
+                <li><a routerLink="/cancellations">Cancellations</a></li>
+                <li><a (click)="logout()">Logout</a></li>
+            </ul>
+        </div>           
+    }@else {
     <div class="offcanvas__btn__widget" >
         <a routerLink="/login" class="btn btn-primary">
             <i class="fa fa-sign-in-alt"></i> Login
@@ -30,10 +37,8 @@
             <i class="fa fa-user-plus"></i> Signup
         </a>
     </div>
+}
 </div>
-<!-- Offcanvas Menu End -->
-
-<!-- Header Section Begin -->
 <header class="header" [class.scrolled]="isScrolled">
     <div class="header__top">
         <div class="container">
@@ -62,7 +67,7 @@
                             <ul class="menu__class">
                                 <li><a routerLink=" ">{{'home' |translate}}</a></li>
                                 <li><a routerLink="/hotels">{{'hotels'|translate}}</a></li>
-                                <!-- <li><a routerLink="/member">Become a Member</a></li> -->
+                                <li><a routerLink="/member">Become a Member</a></li> 
                                 <li><a routerLink="/corporate">{{'Cubino for Business' |translate}}</a></li>
                                 <li><a routerLink="/property">{{'List Your Property'|translate}}</a></li>                                   
                             </ul>
@@ -90,10 +95,7 @@
                             }   
                             <select name="" id="" class="btn btn-success" (change)="ChangeLang($event)">
                                 <option *ngFor="let lang of  this.translate.getLangs()"  [value]="lang"  [selected]="lang===translate.currentLang">{{lang}}</option>
-                                <!-- <option value="fr">French</option>
-                                <option value="es">Spanish</option> -->
-                            </select>       
-                            
+                            </select>         
                         </div>
                     </div>
                 </div>
@@ -104,4 +106,4 @@
         </div>
     </div>
 </header>
-<!-- Header Section End -->
+
