--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -424,4 +424,110 @@ background-color:  #e4990d;
   .offcanvas__logo img {
     max-width: 50%;
 }
+
+.user-dropdown {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.user-icon {
+width: 42px;
+height: 42px;
+border-radius: 50%;
+overflow: hidden;
+display: flex;
+align-items: center;
+justify-content: center;
+background: #ffffff;
+border: 2px solid #ddd;
+transition: 0.3s;
+}
+
+.user-icon img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+border-radius: 50%;
+}
+/* Dropdown Menu */
+.dropdown-menu {
+position: absolute;
+top: 55px;
+right: 0;
+width: 200px;
+background: #313131b0; /* Dark background */
+border-radius: 8px;
+box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+opacity: 0;
+visibility: hidden;
+transform: translateY(-10px);
+transition: all 0.3s ease-in-out;
+z-index: 1000;
+padding: 10px 0;
+}
+
+/* Show dropdown when active */
+.dropdown-menu.show {
+opacity: 1;
+visibility: visible;
+transform: translateY(0);
+}
+
+/* Dropdown items */
+.dropdown-menu li {
+list-style: none;
+padding: 10px 15px;
+}
+
+.dropdown-menu li a {
+text-decoration: none;
+color: #fff;
+font-size: 14px;
+display: flex;
+align-items: center;
+gap: 8px;
+transition: 0.3s;
+}
+
+/* Hover effect */
+.dropdown-menu li a:hover {
+background: rgba(255, 255, 255, 0.1);
+padding-left: 5px;
+border-radius: 5px;
+}
+.dropdown-arrow {
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  //background: #797979;
+  //border: 2px solid #ddd;
+  border-radius: 50%;
+  font-size: 12px;
+  cursor: pointer;
+  transition: 0.3s;
+  color:#f4f5f7;
+  padding-left: 10px;
+}
+
+.dropdown-arrow:hover {
+  background: #f1f1f1;
+}
+
+/* Rotate arrow when dropdown is open */
+.dropdown-arrow.open {
+  transform: rotate(180deg);
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+.dropdown-menu {
+    width: 180px;
+    right: -10px;
+}
+}
   }
+ 
